# AI-Meeting-Assistant

./: .gitignore  README.md  meet_participants.py  meet_speaking.py  meet_speaking_debug.py  package-lock.json  package.json  pyproject.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ActionBar.jsx  ChatbotCard.jsx  DownloadPdfButton.jsx  LiveSummaryCard.jsx  LiveTranslationCard.jsx  MeetingInfoCard.jsx  ParticipantsCard.jsx
frontend/src/pages/: HomePage.jsx  LivePage.jsx  SummaryPage.jsx
meet_llm/: .env  .gitignore  __init__.py  asr.py  audio_worker.py  commands  config.py  main.py  meeting_manager.py  mistral_client.py  recorder.py  redis_client.py  requirements.txt  server.py
meet_llm/google_meet_test/: main.py
